Update deploy_master.sh and linux.sh