@@ -1,4 +1,8 @@
 #!/bin/bash -e
+
+# Setup variables
+export MAVEN_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/javax.crypto=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED"
+
 if [ "$TRAVIS_CPU_ARCH" = "arm64" ]; then
     export TRAVIS_CPU_ARCH_STANDARD="aarch64"
 else
@@ -10,16 +14,31 @@ echo "TRAVIS_OS_NAME: $TRAVIS_OS_NAME"
 echo "TRAVIS_OS_NAME_STANDARD: $TRAVIS_OS_NAME_STANDARD"
 echo "TRAVIS_CPU_ARCH: $TRAVIS_CPU_ARCH"
 echo "TRAVIS_CPU_ARCH_STANDARD: $TRAVIS_CPU_ARCH_STANDARD"
+# End setup variables
 
 echo "$GIT_IGN_TRAVIS_DEPLOY_PRIVATE_KEY" | base64 -d > ~/.ssh/id_rsa
 chmod 600 ~/.ssh/id_rsa
 
-
 ssh-keyscan ssh.git.ignuranza.net >> $HOME/.ssh/known_hosts
 ssh-keyscan git.ignuranza.net >> $HOME/.ssh/known_hosts
 git clone "git@ssh.git.ignuranza.net:tdlight-team/tdlight-java-natives-$TRAVIS_OS_NAME_STANDARD-$TRAVIS_CPU_ARCH_STANDARD.git"
-git push
 cd "tdlight-java-natives-$TRAVIS_OS_NAME_STANDARD-$TRAVIS_CPU_ARCH_STANDARD"
+if [ "$TRAVIS_OS_NAME_STANDARD" = "windows" ]; then
+    mv "$TRAVIS_BUILD_DIR/out/libtdjni.so src/main/resources/libs/$TRAVIS_OS_NAME_STANDARD/$TRAVIS_CPU_ARCH_STANDARD/tdjni.dll"
+    git add "src/main/resources/libs/$TRAVIS_OS_NAME_STANDARD/$TRAVIS_CPU_ARCH_STANDARD/tdjni.dll"
+else
+    mv "$TRAVIS_BUILD_DIR/out/libtdjni.so src/main/resources/libs/$TRAVIS_OS_NAME_STANDARD/$TRAVIS_CPU_ARCH_STANDARD/tdjni.so"
+    git add "src/main/resources/libs/$TRAVIS_OS_NAME_STANDARD/$TRAVIS_CPU_ARCH_STANDARD/tdjni.so"
+fi
+mvn build-helper:parse-version versions:set \
+ -DnewVersion=\${parsedVersion.majorVersion}.\${parsedVersion.minorVersion}.\${parsedVersion.nextIncrementalVersion} \
+ versions:commit
+NEW_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+git add pom.xml
+git commit -m "Updated native library"
+git tag -a "v$NEW_VERSION" -m "Version $NEW_VERSION"
+git push origin "v$NEW_VERSION"
+git push
 ls -alch
 
 ls -alch $TRAVIS_BUILD_DIR/out
